--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -17,3 +17,13 @@
     </div>
   </body>
 </html>
+
+<div id="user_nav">
+  <% if current_user %>
+    Logged in as <%= current_user.email %>
+    <%= link_to "Log out", logout_path %>
+  <% else %>
+    <%= link_to "Sign up", signup_path %> or
+    <%= link_to "Log in", login_path %>
+  <% end %>
+</div>
